frontend/src/components/Post/CreatePost.css
.create-post {
  width: 100%;
  max-width: 800px;
  background: linear-gradient(90deg, #32ac74 0%, #1a8cd8 100%);
  padding: 2px;
  border-radius: 30px;
}

.create-post-container {
  background-color: #090808;
  padding: 2rem;
  border-radius: 30px;
}

.create-post-button button {
  text-align: center;
  width: 200px;
  height: 50px;
  border-radius: 5px;
  background-color: #1a8cd8;
  color: white;
  font-size: 1.2rem;
  font-weight: bold;
  border: none;
}

.create-post .create-post-header {
  height: 50px;
  margin: 1rem 0;
  border-bottom: solid 2px #9e9e9e;
}

.create-post .input-group {
  position: relative;
  margin: 1rem 0;
}

.create-post .input {
  border: solid 2px #9e9e9e;
  width: 100%;
  border-radius: 5px;
  background: none;
  padding: 1rem;
  font-size: 1.2rem;
  color: #fff;
  transition: border 150ms cubic-bezier(0.4, 0, 0.2, 1);
}

.create-post .user-label {
  position: absolute;
  left: 15px;
  color: #e8e8e8;
  pointer-events: none;
  transform: translateY(1rem);
  transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
}

.create-post .input:focus,
.input:valid {
  outline: none;
  border: 2px solid #f0f0f0;
}

.create-post .input:focus ~ label,
.input:valid ~ label {
  transform: translateY(-50%) scale(0.8);
  background-color: #090808;
  padding: 0 0.2em;
  color: #fff;
}

.create-post .post-content {
  width: 100%;
  padding: 1rem;
  border: solid 2px #9e9e9e;
  border-radius: 5px 0 5px 5px;
}

.post-content-type-bar .post-content-type-text {
  /* Align content center and vertically */
  display: flex;
  align-items: center;
  font-size: 1.2rem;
}

.post-content-type-bar .post-content-type-toggle {
  /* Align the toggle buttons to the right */
  text-align: right;
}

.create-post .post-content-text textarea,
.create-post .post-content-text .post-content-markdown-preview {
  width: 100%;
  background: none;
  /* Remove the default border */
  margin: 1rem 0;
  border: none;
  border-top: 1px solid white;
  padding: 1rem 0;
  font-size: 1rem;
  font-weight: normal;
}

/* Remove the default border when the textarea is focused */
.create-post .post-content-text textarea:focus {
  outline: none;
}

.create-post .post-details-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 1rem 0;
  text-align: center;
  height: 50px;
}

.create-post .post-details-bar .post-details-bar-item {
  padding: 0 1rem 0 0;
}

.create-post .post-submit {
  padding: 1rem 0;
  text-align: right;
}

.create-post .post-submit button {
  width: 150px;
  margin: 1rem 1rem 0 0;
}

.create-post .post-content-image-preview {
  display: block;
  margin: 20px auto;
  max-width: 100%;
  max-height: 500px;
}

/*Image drop box*/
.create-post .post-content-image label {
  height: 80%;
  width: 55%;
  margin: 20px;
  border-color: #32ac74;
}

/*Little tiny image next to "Upload"*/
.create-post .post-content-image svg > path {
  fill: #32ac74;
}

